<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/login_views_margin"
    android:layout_marginBottom="@dimen/login_views_margin"
    android:background="@color/whiteCardColor"
    android:elevation="5dp"
    app:cardCornerRadius="@dimen/login_card_radius">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            style="@style/linearParent"
            android:layout_gravity="center"
            android:padding="@dimen/login_views_margin">

            <TextView
                style="@style/headerTextPrimary"
                android:layout_marginTop="@dimen/login_views_margin"
                android:text="@string/register" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_name"
                    style="@style/modifiedEditText"
                    android:digits="@string/allowed_characters"
                    android:hint="@string/name_hint"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_surname"
                    style="@style/modifiedEditText"
                    android:digits="@string/allowed_characters"
                    android:hint="@string/surname_hint"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">

                <ru.maxdexter.albumsearch.presenter.customview.masked.MaskedEditText
                    android:id="@+id/et_birthday"
                    style="@style/modifiedEditText"
                    android:drawableStart="@drawable/ic_baseline_date_range_24"
                    android:digits="@string/allowed_number"
                    app:mask="@string/mask_date"
                    android:inputType="date"
                    android:gravity="center_horizontal"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">

                <ru.maxdexter.albumsearch.presenter.customview.masked.MaskedEditText
                    android:id="@+id/et_phone"
                    style="@style/modifiedEditText"
                    android:inputType="phone"
                    android:digits="@string/allowed_number"
                    android:maxLines="1"
                    app:mask="@string/mask_ru_mobile" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_email"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_password"
                    style="@style/modifiedEditText"
                    android:digits="@string/allowed_characters_end_number"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/signup_text_margin_top">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_password_repeat"
                    style="@style/modifiedEditText"
                    android:digits="@string/allowed_characters_end_number"
                    android:hint="@string/login_password_repeat"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_registration"
                style="@style/loginButton"
                android:layout_gravity="center"
                android:text="@string/register" />

            <TextView
                android:id="@+id/tv_sign_in"
                style="@style/parent"
                android:layout_marginTop="@dimen/login_views_margin"
                android:text="@string/signup_login_hint"
                android:textAlignment="center"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.cardview.widget.CardView>