<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/login_card_radius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/login_views_margin"
    android:layout_marginBottom="@dimen/login_views_margin"
    android:background="@color/whiteCardColor">



    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/login_views_margin">

        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/login"
            android:layout_marginTop="@dimen/login_views_margin"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_email"
            style="@style/parent"
            android:layout_marginTop="@dimen/login_views_margin">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email_login"
                style="@style/modifiedEditText"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/login_email_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_password"
            style="@style/parent"
            android:layout_marginTop="@dimen/login_views_margin">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password_login"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/cirLoginButton"
            style="@style/loginButton"
            android:text="@string/login"
            android:enabled="false"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/login_views_margin"/>

        <TextView
            android:id="@+id/tv_sign_up"
            style="@style/parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/primaryTextColor"
            android:text="@string/login_signup_hint"
            android:layout_marginTop="@dimen/login_views_margin"/>


    </LinearLayout>
</androidx.cardview.widget.CardView>