<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:fitsSystemWindows="true"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:titleEnabled="false"
            app:layout_collapseMode="none"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                app:menu="@menu/toolbar_menu"
                app:title="@string/name_hint"
                app:subtitle="@string/login_email_hint"
                android:fitsSystemWindows="true"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/edt_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:padding="@dimen/dimens_8dp"
                android:layout_margin="@dimen/dimens_8dp"
                app:showAsAction="always"
                app:iconifiedByDefault="false"
                android:background="@drawable/container_search"
                android:drawableStart="@drawable/ic_baseline_search_24"
                android:drawablePadding="@dimen/drawable_left"
                android:fontFamily="@font/roboto_slab"
                android:gravity="center_vertical"
                android:hint="@string/search_here"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/primaryTextColor"
                android:textSize="@dimen/edit_text_text_size">

            </androidx.appcompat.widget.SearchView>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_albums_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:itemCount="7"
            app:spanCount="2"
            tools:listitem="@layout/item_album" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>